mobile version for Banner, NavBar and HamburgerManu

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -13,6 +13,7 @@
 @import './elements/singleCardSearch';
 @import './elements/contentModal';
 @import './elements/modalCredits';
+@import './elements/hamburgerMenu';
 
 
 #root {
