--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -3,14 +3,19 @@
     width: 100vw;
     display: flex;
     flex-direction: column;
+
+    @media screen and (max-width: 720px) {
+        height: 380px;
+    }
 }
 
 .footer-container {
-    display: flex;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
     margin-top: 2.5rem;
     
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 720px) {
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -18,15 +23,16 @@
 }
 
 .footer-logos {
-    width: 15%;
     height: 100%;
+    width: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-left: 2.5rem;
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 720px) {
         text-align: center;
+        margin-left: 0;
     }
 }
 
@@ -34,6 +40,10 @@
     fill: url(#MyGradient);
     -webkit-fill: url(#MyGradient);
     margin-bottom: 20px;
+
+    @media screen and (max-width: 720px) {
+        margin-bottom: 5px;
+    }
 }
 
 .footer-logo-movieon {
@@ -47,35 +57,44 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
+
+    @media screen and (max-width: 720px) {
+        margin-right: 0;
+    }
 }
 
 .footer-descriptions {
     font-size: 0.9rem;
-    width: 80%;
+    width: 70%;
     text-align: center;
     padding-top: 2.5rem;
+    padding-left: 30px;
+    padding-right: 30px;
 
-    @media screen and (max-width: 500px) {
-        padding-top: 2em;
+    @media screen and (max-width: 720px) {
+        width: 100%;
+        padding: 30px;
+        font-size: 0.8rem;
     }
 }
 
 .footer-socialIcons {
-    width: 15%;
+    width: 190px;
     display: flex;
     flex-direction: column;
-    align-items:end;
+    align-items: center;
     justify-content: center;
-    padding-right: 2.5rem;
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 720px) {
+        width: 150px;
         flex-direction: row;
         justify-content: center;
+        margin: 30px 0;
     }
 }
 
 .icon-insta {
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 720px) {
         margin: 0 30px;
     }
 }
@@ -87,7 +106,6 @@
 
     &:hover { 
         animation: animacja 2s ease 0.1s infinite alternate none;
-        //animation-play-state:running; 
     }
 }
 
@@ -116,5 +134,3 @@
         -webkit-text-fill-color: transparent;
     }
 }
-
-
