--- a/src/scss/elements/_search.scss
+++ b/src/scss/elements/_search.scss
@@ -27,11 +27,9 @@
         height: 4.25rem;
         padding: 0.6rem 0;
         box-sizing: border-box;
-
         border: none;
         border-bottom: 2px solid white;
         background-color: $main-app-color;
-
         font-size: 2rem;
         line-height: 2.9rem;
         font-family: 'Poppins', sans-serif;
@@ -40,12 +38,10 @@
         transition: width 0.8s ease-in-out;
 
         @media screen and (max-width: 900px) {
-            width: 60%;
-        }
-
-        @media screen and (max-width: 430px) {
-            font-size: 1.5rem;
-            line-height: 2.4rem;
+            width: 75%;
+            height: 3rem;
+            font-size: 1.2rem;
+            line-height: 2rem;
         }
     }
 
@@ -54,6 +50,15 @@
         outline: none;
         border-bottom: 2px solid white;
         background-color: $main-app-color;
+
+        @media screen and (max-width: 900px) {
+            width: 75%;
+        }
+    }
+
+    @media screen and (max-width: 900px) {
+        padding: 0;
+        text-align: center;
     }
 }
 
@@ -63,7 +68,6 @@
     height: 4.25rem;
     padding: 0.6rem 1.5rem;
     box-sizing: border-box;
-
     border: none;
     border-bottom: 2px solid white;
     background-color: $main-app-color;
@@ -72,14 +76,20 @@
     line-height: 2.9rem;
     font-family: 'Poppins', sans-serif;
     color: whitesmoke;
+
+    @media screen and (max-width: 900px) {
+        height: 50px;
+        font-size: 1.5rem;
+        line-height: 2.4rem;
+        padding: 0;
+    }
 }
 
 .search-results-container {
     width: 86%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
-    
 }
 
 .search-empty-results {
@@ -89,10 +99,13 @@
 }
 
 //prevents autofil styles in chrome browser
-
 input:-webkit-autofill,
 input:-webkit-autofill:focus {
     color-scheme: dark;
     box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0), inset 0 0 0 100px #27282b;
     font-size: 2rem;
+
+    @media screen and (max-width: 900px) {
+        font-size: 1.2rem;
+    }
 }
