--- a/src/scss/elements/_contentModal.scss
+++ b/src/scss/elements/_contentModal.scss
@@ -1,9 +1,8 @@
 .modal-container {
-    display: flex;
-    justify-content: space-between;
-    
     height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
     overflow-y: scroll;
     scrollbar-width: none;
 
@@ -11,7 +10,7 @@
         display: none;
     }
 
-    @media screen and (max-width: 812px) {
+    @media screen and (max-width: 870px) {
         flex-direction: column;
         justify-content: space-between;
     }
@@ -24,7 +23,7 @@
 .modal-img-upright {
     object-fit: contain;
 
-    @media screen and (max-width: 812px) {
+    @media screen and (max-width: 870px) {
         object-fit: contain;
         display: none;
     }
@@ -34,7 +33,7 @@
     object-fit: contain;
     display: none;
 
-    @media screen and (max-width: 812px) {
+    @media screen and (max-width: 870px) {
         object-fit: contain;
         display: inherit;
     }
@@ -53,12 +52,14 @@
         margin: 30px 45px;
         text-align: center;
     }
+
     h2 {
         margin-bottom: 20px;
         margin-left: 110px;
         margin-right: 110px;
     }
-    @media screen and (max-width: 812px) {
+
+    @media screen and (max-width: 870px) {
         display: none;
     }
 }
@@ -79,12 +80,14 @@
         margin-bottom: 30px;
         text-align: center;
     }
+
     h2 {
         margin-bottom: 40px;
         margin-left: 30px;
         margin-right: 30px;
     }
-    @media screen and (max-width: 812px) {
+    
+    @media screen and (max-width: 870px) {
         display: inherit;
     }
 }
@@ -99,7 +102,7 @@
 
     flex-grow: 1;  //gives max width to modal description
 
-    @media screen and (max-width: 812px) {
+    @media screen and (max-width: 870px) {
         margin: 0;
     }
 
@@ -113,16 +116,22 @@
     font-size: 30px;
     line-height: 38px;
 
-    @media screen and (max-width: 812px) { 
+    @media screen and (min-width: 871px) and (max-width: 1040px){ 
+        font-size: 23px;
+        line-height: 30px;
+    }
+
+    @media screen and (min-width: 500px) and (max-width: 870px){ 
         margin-bottom: 8px;
         margin-top: 8px;
-        font-size: 15px;
+        font-size: 20px;
         line-height: 20px;
     }
 
-    @media screen and (min-width: 813px) and (max-width: 1040px){ 
-        font-size: 23px;
-        line-height: 30px;
+    @media screen and (width < 500px) { 
+        font-size: 17px;
+        line-height: 17px;
+        margin: 8px 0;
     }
 }
 
@@ -130,8 +139,12 @@
     font-weight: 400;
     font-size: 18px;
 
-    @media screen and (max-width: 812px) { 
-        font-size: 11px;
+    @media screen and (min-width: 501px) and (max-width: 1040px){ 
+        font-size: 15px;
+    }
+
+    @media screen and (max-width: 500px) { 
+        font-size: 13px;
     }
 }
 
@@ -155,6 +168,7 @@
     font-weight: 400;
     margin-top: 10px;
     font-size: 15px;
+
     span {
         font-weight: 700;
         font-size: 16px;
@@ -163,19 +177,22 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
 
-        @media screen and (max-width: 812px) { 
-            font-size: 10px;
+        @media screen and (max-width: 870px) { 
+            font-size: 12px;
         }
     }
+
+    @media screen and (min-width: 871px) and (max-width: 1040px){ 
+        font-size: 13px;
+    }
     
-    @media screen and (max-width: 812px) { 
+    @media screen and (max-width: 870px) { 
         margin-top: 5px;
-        font-size: 9px;
+        font-size: 12px;
     }
 }
 
 .modal-description-container {
-    
     background-color: $backgroundcolor-btns-navbar;
     margin-top: 1rem;
     margin-bottom: 1.3rem;
@@ -189,7 +206,7 @@
         display: none;
     }
 
-    @media screen and (max-width: 812px) {
+    @media screen and (max-width: 870px) {
         border-radius: 10px;
         margin-bottom: 15px;
     }
@@ -201,13 +218,13 @@
     text-align: justify;
     font-size: 15px;
 
-    @media screen and (max-width: 812px) {
+    @media screen and (max-width: 870px) {
         padding: 10px 8px;
-        font-size: 9px;
+        font-size: 12px;
     }
 
-    @media screen and (min-width: 813px) and (max-width: 1040px){ 
-        font-size: 12px;
+    @media screen and (min-width: 871px) and (max-width: 1040px){ 
+        font-size: 13px;
     }
 }
 
