--- a/src/scss/elements/_contentModal.scss
+++ b/src/scss/elements/_contentModal.scss
@@ -45,7 +45,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 7px;
+    border-radius: 9px;
     background-image: linear-gradient(to bottom right,#5b4df6,#ff493b);
 
     p {
@@ -70,7 +70,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 7px;
+    border-radius: 9px;
     background-image: linear-gradient(to bottom right, #5b4df6,#ff493b);
     display: none;
 
@@ -130,7 +130,7 @@
 
     @media screen and (width < 500px) { 
         font-size: 17px;
-        line-height: 17px;
+        line-height: 23px;
         margin: 8px 0;
     }
 }
@@ -218,13 +218,13 @@
     text-align: justify;
     font-size: 15px;
 
-    @media screen and (max-width: 870px) {
-        padding: 10px 8px;
-        font-size: 12px;
+    @media screen and (min-width: 501px) and (max-width: 1040px){ 
+        font-size: 13px;
     }
 
-    @media screen and (min-width: 871px) and (max-width: 1040px){ 
-        font-size: 13px;
+    @media screen and (max-width: 500px) {
+        font-size: 12px;
+        padding: 10px;
     }
 }
 
