--- a/src/scss/elements/_search.scss
+++ b/src/scss/elements/_search.scss
@@ -78,9 +78,12 @@
     color: whitesmoke;
 
     @media screen and (max-width: 900px) {
-        height: 50px;
-        font-size: 1.5rem;
-        line-height: 2.4rem;
+        //height: 50px;
+        // font-size: 1.5rem;
+        // line-height: 2.4rem;
+        height: 3rem;
+        font-size: 1.2rem;
+        line-height: 2rem;
         padding: 0;
     }
 }
