fix font size mobile

--- a/src/scss/elements/_hamburgerMenu.scss
+++ b/src/scss/elements/_hamburgerMenu.scss
@@ -24,8 +24,8 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 700;
-  font-size: 1.1rem;
-  padding: 0.8rem;
+  font-size: 17px;
+  padding: 13px 12px;
 }
 
 .hamburger-menu {
