--- a/src/scss/elements/_singleCardSearch.scss
+++ b/src/scss/elements/_singleCardSearch.scss
@@ -71,6 +71,7 @@
     margin-bottom: 6px;
     font-size: 15px;
     padding-left: 3px;
+    padding-right: 3px;
     line-height: 19px;
 }
 
@@ -103,8 +104,6 @@
 
 //MovieControls component ----------------------------------------------------------
 .moviecontrols-main {
-    //height: 3rem;
-    // width: 100%;
     display: flex;
     justify-content: center;
 }
