--- a/src/scss/elements/_singleImageInRow.scss
+++ b/src/scss/elements/_singleImageInRow.scss
@@ -198,7 +198,7 @@
 
 .image-hover-overview {
     font-weight: 400;
-    font-size: 0.8rem;
+    font-size: 12.5px;
     margin-top: 5px;
     margin-bottom: 5px;
     text-align: justify;
@@ -206,7 +206,7 @@
 
 .single-hover-overviewLarge {
     font-weight: 400;
-    font-size: 0.9rem;
+    font-size: 13px;
     margin-top: 10px;
     margin-bottom: 15px;
     text-align: justify;
