--- a/src/scss/settings/_buttons.scss
+++ b/src/scss/settings/_buttons.scss
@@ -6,8 +6,8 @@
     outline: none;
     
     color: whitesmoke;
-    font-size: 0.8rem;
-    line-height: 0.9rem;
+    font-size: 12.8px;
+    line-height: 14.4px;
     font-weight: 500;
 
     background: transparent;
