--- a/src/scss/elements/_banner.scss
+++ b/src/scss/elements/_banner.scss
@@ -42,18 +42,19 @@
 }
 
 .banner-description {
-    line-height: 1.3rem;
-    padding-top: 1rem;
-    font-size: 0.9rem;
+    line-height: 21px;
+    padding-top: 16px;
+    font-size: 14.4px;
     font-weight: 600;
     max-width: 360px;
     height: 150px;
     text-shadow: 1px 1px 6px black;
 
-    @media screen and (max-width: 380px) {
+    @media screen and (max-width: 645px) {
         padding-right: 10px;
         max-width: 290px;
-        font-size: 0.85rem;
+        font-size: 13px;
+        line-height: 18px;
     }
 }
 
@@ -68,15 +69,15 @@
     outline: none;
     border: none;
     color: whitesmoke;
-    font-size: 0.9rem;
-    line-height: 1rem;
+    font-size: 14.4px;
+    line-height: 16px;
     font-weight: 400;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    margin-right: 1rem;
-    padding-top: 0.6rem;
+    padding-left: 32px;
+    padding-right: 32px;
+    margin-right: 16px;
+    padding-top: 9.6px;
     background-color: rgba(18, 18, 37, 0.5);
-    padding-bottom: 0.6rem;
+    padding-bottom: 9.6px;
     border-radius: 30px;
     transition: all 0.7s;
 
@@ -90,6 +91,6 @@
 }
 
 .banner-fadeBottom {
-    height: 8rem;
+    height: 128px;
     background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.41), $main-app-color);  
 }
