--- a/src/scss/elements/_modalCredits.scss
+++ b/src/scss/elements/_modalCredits.scss
@@ -4,12 +4,19 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
-    @media screen and (max-width: 870px) {
+
+    @media screen and (max-width: 400px) {
+        max-height: 135px;
         flex-direction: row;
         margin-top: 15px;
         justify-content: space-between;
-        max-height: 130px;
+    }
+    
+    @media screen and (width > 400px) and (width <= 870px) {
+        flex-direction: row;
+        margin-top: 15px;
+        justify-content: space-between;
+        max-height: 170px;
     }
 }
 
@@ -36,11 +43,31 @@
         background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+
+        @media screen and (width >= 2100px) {
+            padding: 0 35px;
+            font-size: 1.1rem;
+         }
+    
+         @media screen and (width >= 2450px) {
+            padding: 0 40px;
+            font-size: 1.5rem;
+        }
     }
     
     @media screen and (max-width: 400px) {
         height: 105px;
         max-width: 70px;
+    }
+
+    @media screen and (width >= 2100px) {
+        max-width: 150px;
+        height: 225px;
+     }
+
+     @media screen and (width >= 2450px) {
+        max-width: 180px;
+        height: 270px;
     }
 }
 
@@ -50,6 +77,14 @@
 
     @media screen and (max-width: 400px) {
         max-width: 70px;
+    }
+
+    @media screen and (width >= 2100px) {
+       max-width: 150px;
+    }
+
+    @media screen and (width >= 2450px) {
+        max-width: 180px;
     }
 }
 
@@ -65,4 +100,16 @@
         max-width: 70px;
         line-height: 12px;
     }
+
+    @media screen and (width >= 2100px) {
+        font-size: 15px;
+        max-width: 150px;
+        line-height: 22px;
+     }
+
+     @media screen and (width >= 2450px) {
+        font-size: 20px;
+        max-width: 180px;
+        line-height: 27px;
+     }
 }
