--- a/src/scss/elements/_banner.scss
+++ b/src/scss/elements/_banner.scss
@@ -31,6 +31,9 @@
     font-weight: 700;
     padding-bottom: 0.3rem;
     text-shadow: 1px 1px 5px black;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 
     @media screen and (width > 650px) and (width <= 1000px) {
         font-size: 2.1rem;
