--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    height: 16rem;
+    height: 100%;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-top: 2.5rem;
+    margin-top: 4rem;
     
     @media screen and (max-width: 720px) {
         flex-direction: column;
@@ -123,7 +123,7 @@
 
 .footer-copyright {
     padding-top: 1rem;
-    padding-bottom: 1.5rem;
+    padding-bottom: 1rem;
     text-align: center;
 
     span {
