--- a/src/scss/elements/_search.scss
+++ b/src/scss/elements/_search.scss
@@ -19,16 +19,23 @@
 .search-input {
    width: 100%;
    height: 10rem;
-   padding-left: 8rem;
+   display: flex;
+   justify-content: center;
+   //padding-left: 8rem;
    margin-bottom: 2.3rem;
 
     input {
-        width: 30%;
+        width: 80%;
         height: 4.25rem;
         padding: 0.6rem 0;
         box-sizing: border-box;
         border: none;
         border-bottom: 2px solid white;
+
+        border-radius: 0;
+        appearance: none;
+        -webkit-appearance: none;
+
         background-color: $main-app-color;
         font-size: 2rem;
         line-height: 2.9rem;
@@ -46,10 +53,13 @@
     }
 
     input:focus {
-        width: 82%;
+        //width: 82%; change input apperance when input focused
         outline: none;
         border-bottom: 2px solid white;
         background-color: $main-app-color;
+        border-radius: 0;
+        appearance: none;
+        -webkit-appearance: none;
 
         @media screen and (max-width: 900px) {
             width: 75%;
